# adversarial-ids-ml

./: .gitignore  EXECUTION_PLAN.md  FINDINGS.md  HYPOTHESIS_REGISTRY.md  README.md  TRADEOFF_LOG.md  environment.yml  project.yaml  pyproject.toml  reproduce.sh
blog/: README.md  adversarial_ids_threat_model.md  conference_abstract.md  draft.md  linkedin_post.md  substack_intro.md
data/: checksums.sha256
docs/: ADVERSARIAL_EVALUATION.md  ARTIFACT_MANIFEST_SPEC.md  A_PLUS_CHECKLIST.md  CLAUDE_MD.md  CONFIGURATION_SPEC.md  CONTENT_PLAN.md  DATA_CONTRACT.md  DECISION_LOG.md  ENVIRONMENT_CONTRACT.md  EXPERIMENT_CONTRACT.md  FIGURES_TABLES_CONTRACT.md  HYPOTHESIS_CONTRACT.md  HYPOTHESIS_REGISTRY.md  IMPLEMENTATION_PLAYBOOK.md  METRICS_CONTRACT.md  PRE_SUBMISSION_CHECKLIST.md  PROJECT_BRIEF.md  PROVENANCE_SPEC.md  PUBLICATION_BRIEF.md  PUBLICATION_PIPELINE.md  REPORT_ASSEMBLY_PLAN.md  REPRODUCIBILITY_SPEC.md  RISK_REGISTER.md  SCRIPT_ENTRYPOINTS_SPEC.md  TEST_ARCHITECTURE.md
models/: MLP_seed42.pkl  XGBoost_seed42.pkl
outputs/adversarial/: constrained_results.json  unconstrained_results.json
outputs/baselines/: sanity_seed42.json  (+6 more)
scripts/: check_data_ready.py  download_data.sh  make_report_figures.py  run_complexity_curves.py  run_learning_curves.py  run_sanity_baselines.py  train_expanded_models.py  verify_env.sh
src/: adversarial_attacks.py  defenses.py  eda.py  preprocessing.py  train_baselines.py
tests/: conftest.py  test_adversarial.py  test_basic.py  test_data_integrity.py  test_leakage_tripwires.py  test_pipeline.py  test_reproducibility.py  test_sanity.py
(+12 files in other folders)
