[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "adversarial-ids"
version = "0.1.0"
description = "Adversarial ML on network intrusion detection with feature controllability analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Rex Coleman"}]
keywords = ["ai", "security", "machine-learning"]

[project.urls]
Homepage = "https://github.com/rexcoleman/adversarial-ids-ml"
Repository = "https://github.com/rexcoleman/adversarial-ids-ml"

[tool.setuptools.packages.find]
include = ["src*"]
